@@ -4,5 +4,5 @@ call mvn -q clean package -DskipTests
 if %ERRORLEVEL% NEQ 0 ( pause & exit /b )
 echo 🚀 Running Hero Demo...
 call mvn -q -f examples/Demo/pom.xml compile
-call java -cp "target\fastglob-0.1.0.jar;examples\Demo\target\classes" fastglob.Demo
+call java --enable-native-access=ALL-UNNAMED -cp "target\fastglob-0.1.0.jar;examples\Demo\target\classes" fastglob.Demo
 pause
